--- a/app/views/invitations/_form.html.erb
+++ b/app/views/invitations/_form.html.erb
@@ -1,10 +1,10 @@
 <%= simple_form_for @invitation, :html => { :class => 'form-horizontal' } do |f| %>
   <%= f.association :user, label_method: :email_with_phone %>
   <%= f.association :recipient, label_method: :email_with_phone %>
-  <%= f.association :account, label_method: :id %>
+  <%= f.association :account, collection: (@invitation.new_record? ? current_user.accounts : current_user.all.accounts), label_method: :id %>
   <%= f.input :recipient_email %>
   <%= f.input :recipient_phone %>
-  <%= f.input :state %>
+  <%= f.input :state, collection: Invitation::STATES %>
   <div class="form-actions">
     <%= f.button :submit, :class => 'btn-primary' %>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
