--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,11 @@
             <li><%= link_to "Invitations", invitations_path %></li>
             <li><%= link_to "Accounts", accounts_path %></li>
             <li><%= link_to "Transactions", transactions_path %></li>
-            <li><%= link_to "Logout", logout_path %></li>
+            <% if current_user %>
+              <li><%= link_to "Logout", logout_path %></li>
+            <% else %>
+              <li><%= link_to "Login", login_path %></li>
+            <% end %>
           </ul>
         </div>
       </div>
