--- a/app/views/transactions/_form.html.erb
+++ b/app/views/transactions/_form.html.erb
@@ -1,6 +1,6 @@
 <%= simple_form_for @transaction, :html => { :class => 'form-horizontal' } do |f| %>
   <%= f.association :user, label_method: :email_with_phone %>
-  <%= f.association :account, label_method: :id %>
+  <%= f.association :account, collection: current_user.all_accounts, label_method: :id %>
   <%= f.input :value %>
   <%= f.input :date %>
   <%= f.input :description %>
