Poprawki do zaproszen

--- a/app/views/invitations/show.html.erb
+++ b/app/views/invitations/show.html.erb
@@ -22,8 +22,8 @@
   <%= @invitation.recipient_phone %>
 </p>
 <p>
-  <strong><%= model_class.human_attribute_name(:state) %>:</strong><br>
-  <%= @invitation.state %>
+  <strong><%= model_class.human_attribute_name(:state_name) %>:</strong><br>
+  <%= @invitation.state_name %>
 </p>
 
 <div class="form-actions">
