--- a/app/views/invitations/index.html.erb
+++ b/app/views/invitations/index.html.erb
@@ -9,7 +9,7 @@
       <th><%= model_class.human_attribute_name(:account_id) %></th>
       <th><%= model_class.human_attribute_name(:recipient_email) %></th>
       <th><%= model_class.human_attribute_name(:recipient_phone) %></th>
-      <th><%= model_class.human_attribute_name(:state) %></th>
+      <th><%= model_class.human_attribute_name(:state_name) %></th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
@@ -18,12 +18,16 @@
     <% @invitations.each do |invitation| %>
       <tr>
         <td><%= link_to invitation.id, invitation_path(invitation) %></td>
-        <td><%= link_to invitation.user_id, user_path(invitation.user_id) %></td>
-        <td><%= link_to invitation.recipient_id, user_path(invitation.recipient_id) %></td>
+        <td><%= link_to_if invitation.user_id.present?, invitation.user_id, user_path(invitation.user_id) %></td>
+        <td>
+          <% if invitation.recipient_id.present? %>
+            <%= link_to invitation.recipient_id, user_path(invitation.recipient_id) %>
+          <% end %>
+        </td>
         <td><%= link_to invitation.account_id, account_path(invitation.account_id) %></td>
         <td><%= invitation.recipient_email %></td>
         <td><%= invitation.recipient_phone %></td>
-        <td><%= invitation.state %></td>
+        <td><%= invitation.state_name %></td>
         <td><%=l invitation.created_at, format: :long %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
