--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,15 +19,16 @@
         <a class="brand" href="#">Wallet</a>
         <div class="nav-collapse">
           <ul class="nav">
-            <li><%= link_to "Sessions", sessions_path %></li>
-            <li><%= link_to "Users", users_path %></li>
-            <li><%= link_to "Invitations", invitations_path %></li>
-            <li><%= link_to "Accounts", accounts_path %></li>
-            <li><%= link_to "Transactions", transactions_path %></li>
             <% if current_user %>
+              <li><%= link_to "Sessions", sessions_path %></li>
+              <li><%= link_to "Users", users_path %></li>
+              <li><%= link_to "Invitations", invitations_path %></li>
+              <li><%= link_to "Accounts", accounts_path %></li>
+              <li><%= link_to "Transactions", transactions_path %></li>
               <li><%= link_to "Logout", logout_path %></li>
             <% else %>
               <li><%= link_to "Login", login_path %></li>
+              <li><%= link_to "Register", new_user_path %></li>
             <% end %>
           </ul>
         </div>
