--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -20,13 +20,15 @@
         <td><%= l user.created_at, format: :long %></td>
         <td><%= link_to t("helpers.links.show"), profile_path(user.profile), :class => 'btn btn-mini' %></td>
         <td>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+          <% if user == current_user %>
+            <%= link_to t('.edit', :default => t("helpers.links.edit")),
                       edit_user_path(user), :class => 'btn btn-mini' %>
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+            <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
                       user_path(user),
                       :method => :delete,
                       :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
                       :class => 'btn btn-mini btn-danger' %>
+          <% end %>
         </td>
       </tr>
     <% end %>
