--- a/app/views/accounts/_form.html.erb
+++ b/app/views/accounts/_form.html.erb
@@ -1,4 +1,5 @@
 <%= simple_form_for @account, :html => { :class => 'form-horizontal' } do |f| %>
+  <%= f.input :name %>
   <%= f.input :currency, collection: [:EUR, :PLN, :USD] %>
   <%= f.input :public %>
   <% if @account.new_record? %>
