Upload plikow via HTML form

--- a/app/views/transactions/_form.html.erb
+++ b/app/views/transactions/_form.html.erb
@@ -3,6 +3,7 @@
   <%= f.input :value %>
   <%= f.input :date %>
   <%= f.input :description %>
+  <%= f.input :attachment, as: :file %>
   <%= f.input :tag_names %>
   <div class="form-actions">
     <%= f.button :submit, :class => 'btn-primary' %>
