--- a/app/views/transactions/show.html.erb
+++ b/app/views/transactions/show.html.erb
@@ -22,6 +22,10 @@
   <%= @transaction.description %>
 </p>
 <p>
+  <strong><%= model_class.human_attribute_name(:attachment) %>:</strong><br>
+  <%= link_to @transaction.attachment.url, @transaction.attachment.url %>
+</p>
+<p>
   <strong><%= model_class.human_attribute_name(:tag_names) %>:</strong><br>
   <%= @transaction.tag_names %>
 </p>
