--- a/app/views/transactions/show.html.erb
+++ b/app/views/transactions/show.html.erb
@@ -21,10 +21,12 @@
   <strong><%= model_class.human_attribute_name(:description) %>:</strong><br>
   <%= @transaction.description %>
 </p>
-<p>
-  <strong><%= model_class.human_attribute_name(:attachment) %>:</strong><br>
-  <%= link_to @transaction.attachment.url, @transaction.attachment.url %>
-</p>
+<% if @transaction.attachment.present? %>
+  <p>
+    <strong><%= model_class.human_attribute_name(:attachment) %>:</strong><br>
+    <%= link_to @transaction.attachment.url, @transaction.attachment.url %>
+  </p>
+<% end %>
 <p>
   <strong><%= model_class.human_attribute_name(:tag_names) %>:</strong><br>
   <%= @transaction.tag_names %>
